# BeebView

./: .gitattributes  .gitignore  .gitmodules  .overcommit.yml  .perlcriticrc  AUTHORS.md  About.cpp  About.h  About.ui  BbcScreenWidget.cpp  BbcScreenWidget.h  Beebview.cpp  Beebview.h  Beebview.qrc  Beebview.rc  Beebview.sln  Beebview.ui  Beebview.vcproj  Beebview.vcxproj  Beebview.vcxproj.filters  Bitmap.cpp  Bitmap.h  CMakeLists.txt  README.md  Resource.h  help.md  main.cpp  publish.bat  stdafx.cpp  stdafx.h  zip release.bat  zip source.bat
.git-hooks/pre_commit/: cppcheck.rb
.github/: dependabot.yml
.github/workflows/: ci.yml
package/: CPackOptions.cmake  beebview.desktop  debian-control  debian.pl  manpage.pl  package_debian.pl  package_linux  package_linux.pl  package_linux.sh  package_windows.bat
package/linux/: beebview.xml  debian-changelog  debian-copyright  generate-manpage  manpage.pl
package/windows/: wix_patch.xml
